--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Что почитать школьнику идущему в ИТ индустрию
+title: ИТ для школьников
 description: 
 theme: jekyll-theme-cayman
 show_downloads: false
