--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: ИТ для школьников
-description: 
+description: Список чтения для желающих попасть в ИТ отрасль
 theme: jekyll-theme-cayman
 show_downloads: false
 locale: ru-RU
